...

    return CupertinoPageScaffold(
      navigationBar: CupertinoNavigationBar(
        automaticallyImplyLeading: false,
        transitionBetweenRoutes: false,
        middle: Text(
          "Search",
          style: TextStyle(
            fontSize: 25,
            fontWeight: FontWeight.bold,
            color: CupertinoTheme.of(context).primaryColor,
          ),
        ),
...
              onChanged: (_) => _initiateSearchMethod(),
              placeholder:
                  "Search${searchIdx == 0 ? " users" : searchIdx == 1 ? " groups" : " events"}...",
            ),
          ),
          CustomSelectionOption(
            textLeft: "Users",
            textRight: "Events",
            textMiddle: "Groups",
            onChanged: (value) {
              setState(() {
                searchIdx = value;
                _initiateSearchMethod();
              });
            },
...
