...
                      : SizedBox(
                          height: MediaQuery.of(context).size.height * 0.5,
                          child: Image.asset(
                            'assets/images/no_events.png',
                          ),
                        ),
                  const Text('No events found',
                      style: TextStyle(
                        color: CupertinoColors.systemGrey,
                        fontSize: 20,
                        fontWeight: FontWeight.bold,
                      )),
                ],
...
